[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 社区已经开发出高质量的 Rust 数值库：num
num = "0.4.0" 
reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"
structopt="0.3.26"
regex="1.7.0"
anyhow ="1"
flate2 = "1.0.0"
tar = "0.4.0"
ring= "0.16.20"
error-chain = "0.12.4"
data-encoding = "2.3.2"
clap = "2.0.26"
ansi_term = "0.12.1"
crossbeam = {version = "0.8.2"}
crossbeam-channel= "0.5.6"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
futures = "0.3.25"
futures-util = "0.3.25"
bincode = "1.3.3"
bytes = "1.3.0"

threadpool = "1.1.1"
image = "0.24.5"
rusqlite = "0.28.0"
chrono = "0.4.23"
log = "0.4.17"
log4rs = "1.2.0"
percent-encoding = "2.2.0"
url= "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json  = "1.0.89"
serde_yaml = "0.9.10"
toml = "0.5.9"
walkdir = "2.3.2"
glob = "0.3.0"
lazy_static = "1.4.0"

# rust_icu_ucol = "3.0.0"
# chinese-number = "0.6.5"
# sort_zh = "0.1.1"


async-trait = "0.1.77"
#env_logger = "0.11.3"
#log = "0.4.21"
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-load-balancing = "0.1.0"
pingora-proxy = "0.1.0"
#structopt = "0.3.26"
#openssl-sys = "0.9.39"
env_logger = "0.9"